Moved files to folders

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head></head>
         <title>Search</title>
-        <link rel="stylesheet" href="googlestyle.css">
+        <link rel="stylesheet" href="styles/googlestyle.css">
     </head>
     <body>
         <p>Это текст.</p>
-        <img src='googlelogo.png'>
+        <img src='images/googlelogo.png'>
         <form action="https://google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
