--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <link rel="stylesheet" href="styles/googlestyle.css">
     </head>
     <body>
-        <p>Это первый текст).</p>
-        <p>Это второй текст)).</p>
+        <p>Это 1).</p>
+        <p>Это 2).</p>
         <img src='images/googlelogo.png'>
         <form action="https://google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
-        <p>Это третий текст))).</p>
+        <p>Это 3).</p>
     </body>
 </html>
