--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <link rel="stylesheet" href="styles/googlestyle.css">
     </head>
     <body>
-        <p>Это 1).</p>
-        <p>Это 2).</p>
+        <p>Text 14.11.2021.</p>
+        <p>This second text.</p>
         <img src='images/googlelogo.png'>
         <form action="https://google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
-        <p>Это 3).</p>
+        <p>Text 15.11.2021.</p>
     </body>
 </html>
