--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <p>Text 14.11.2021.</p>
         <p>This second text.</p>
-        <img class="displayed" src='images/googlelogo.png'>
+        <img class="centered" src='images/googlelogo.png'>
         <form action="https://google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
