--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles/googlestyle.css">
     </head>
     <body>
-        <p>Text 14.11.2021.</p>
+        <p class="centered">Text 14.11.2021.</p>
         <p>This second text.</p>
         <img class="centered" src='images/googlelogo.png'>
         <form action="https://google.com/search">
